--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Permanent+Marker&display=swap"
+      rel="stylesheet">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <title>Store recording</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
